--- a/test-prototype/html/product-details.html
+++ b/test-prototype/html/product-details.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>商品详情</title>
+    <base href="/html/">
     <link rel="stylesheet" href="css/product-details.css">
 </head>
 <body>
