--- a/test-prototype/html/product-details.html
+++ b/test-prototype/html/product-details.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html lang="zh-CN" data-nav-level="1" data-nav-name="商品详情" data-nav-seq="2">
-<head>
+<!DOCTYPE html><html lang="zh-CN" data-nav-level="1" data-nav-name="商品详情" data-nav-seq="2"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>商品详情</title>
     <base href="/html/">
     <link rel="stylesheet" href="css/product-details.css">
-</head>
+<script src="$lib/mcp-prototype-inject.js"></script></head>
 <body>
     <div class="product-container">
         <div class="product-image">
@@ -40,5 +38,5 @@
     </div>
     
     <script src="js/product-details.js"></script>
-</body>
-</html>
+
+</body></html>
