copy js to static dir

--- a/test-prototype/html/login.html
+++ b/test-prototype/html/login.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link rel="stylesheet" href="css/login.css">
-<script src="$lib/mcp-prototype-inject.js"></script></head>
+<base href="/html/"><script src="js/mcp-prototype-inject.js" defer=""></script></head>
 <body>
     <div class="login-container">
         <h1>Login</h1>
