--- a/test-prototype/html/product-details.html
+++ b/test-prototype/html/product-details.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>商品详情</title>
     <link rel="stylesheet" href="css/product-details.css">
-<script src="$lib/mcp-prototype-inject.js"></script></head>
+<base href="/html/"><script src="js/mcp-prototype-inject.js" defer=""></script></head>
 <body>
     <div class="product-container">
         <div class="product-image">
