tree for test prototype

--- a/test-prototype/html/product/product-details.html
+++ b/test-prototype/html/product/product-details.html
@@ -2,12 +2,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>商品详情</title>
-    <link rel="stylesheet" href="css/product-details.css">
+    <link rel="stylesheet" href="../css/product-details.css">
 <base href="/html/"><script src="js/mcp-prototype-inject.js" defer=""></script></head>
 <body>
     <div class="product-container">
         <div class="product-image">
-            <img src="product-image.svg" alt="商品图片">
+            <img src="img/product-image.svg" alt="商品图片">
         </div>
         <div class="product-info">
             <h1 class="product-title" data-marker="商品标题">商品名称</h1>
