support html file no nav define

--- a/test-prototype/html/level1/level2/leaf.html
+++ b/test-prototype/html/level1/level2/leaf.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="zh-CN" data-nav-level="1" data-nav-name="树测试" data-nav-seq="1"><head>
+<!DOCTYPE html><html lang="zh-CN"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
