fix overflow problem for marker

--- a/test-prototype/html/product/product-details.html
+++ b/test-prototype/html/product/product-details.html
@@ -38,4 +38,6 @@
     
     <script src="js/product-details.js"></script>
 
+<button class="test-marker-button" data-marker="测试按钮，这是一个很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长的提示" style="position: fixed; bottom: 20px; right: 20px; z-index: 9999; padding: 10px 15px; background-color: #007bff; color: white; border: none; border-radius: 4px; cursor: pointer; box-shadow: 0 2px 10px rgba(0,0,0,0.2);">测试按钮</button>
+
 </body></html>
